--- a/mysql/mysql-secret.yml
+++ b/mysql/mysql-secret.yml
@@ -5,6 +5,9 @@ data:
   LOCAL_DB_HOST: bXlzcWwtc3Zj
   LOCAL_DB_PASSWORD: ZWxhZHd5
   LOCAL_DB_USER: cm9vdA==
+  DJANGO_SUPERUSER_EMAIL: YWhtZWRpYnJhaGllbTExMUBnbWFpbC5jb20=
+  DJANGO_SUPERUSER_USERNAME: YWRtaW4=
+  DJANGO_SUPERUSER_PASSWORD: TG1XZjhkQDU=
 kind: Secret
 metadata:
   creationTimestamp: "2025-04-09T08:22:51Z"
