--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: ml7ma-frontend
-          image: eladwy/elml7ma
+          image: borhom11/frontend:1.0.5
           imagePullPolicy: Always
           ports:
             - containerPort: 80
